# Coffee-Bean-Classifier

./: .gitignore  pyproject.toml  requirements-training.txt  requirements.txt
app/: main.py
app/components/: ui.py
app/pages/: 1_Prediction.py  2_Explainability.py  3_About.py
models/: registry.json
models/baseline/: MobileNetV3Small.onnx  metadata.json
notebooks/: Preprocessing.ipynb
src/: config.py
src/data/: dataset_builder.py  preprocessing.py
src/inference/: predictor.py
src/models/: model_builder.py  model_exporter.py
src/torch/: dataloader.py  dataset.py
src/training/: evaluator.py  trainer.py
tests/: test_dataset_builder.py  test_predictor.py
