[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coffee-bean-classifier"
version = "0.1.0"
description = "Coffee Bean Quality Classification — ML pipeline & inference"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]